# oh-my-copilot

./: .env.example  .gitignore  .instructions.md  AGENTS.md  BRIEF.md  CONTEXT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  test_skills.py
.github/instructions/: matt-pocock-harness.instructions.md
.github/prompts/: autocopilot.prompt.md  omc-full-audit.prompt.md
.github/workflows/: auto-label.yml  ci.yml  cleanup.yml  pr-check.yml  release.yml  stale.yml  upgrade-test.yml
agents/: analyst.md  architect.md  code-reviewer.md  code-simplifier.md  critic.md  debugger.md  designer.md  document-specialist.md  executor.md  explore.md  git-master.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md  writer.md
benchmark/: README.md  quick_test.py
benchmarks/: run-all.py
benchmarks/baselines/: omp-baseline.json
bridge/: omp-bridge.py
commands/: ask.md  autoresearch.md  ccg.md  compact.md  configure-notifications.md  debug.md  deep-dive.md  deepinit.md  external-context.md  hud.md  learner.md  mcp-setup.md  omc-doctor.md  omc-setup.md  omc-teams.md  project-session-manager.md  psm.md  release.md  remember.md  sciomc.md  self-improve.md  skill.md  skillify.md  trace.md  verify.md  visual-verdict.md  wiki.md  writer-memory.md
docs/adr/: 0001-skill-interface-and-domain-separation.md  0002-codebase-design-deep-modules.md
docs/agents/: domain.md  issue-tracker.md
hooks/: hooks.json
scripts/: check_prereqs.sh  create_workflow_pptx.js  verify_labs.sh
tests/: __init__.py  conftest.py
(+215 files in other folders)
